# tree-sitter-pgn

./: .eslintrc.js  .gitattributes  .npmignore  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-pgn.wasm  tree-sitter.json
.github/actions/: package-pypi.yml
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-pgn.h  tree-sitter-pgn.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_pgn/: __init__.py  binding.c
bindings/python/tree_sitter_pgn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bindings/rust/: build.rs  lib.rs
examples/dos/: crlf_line_endings.pgn
examples/header/: last_tagpair_commented_out.pgn  unescaped_tagpair_quotes.pgn
examples/notation/: implicit_capture_notation.pgn
examples/novelty/: novelty_annotation_ambiguity.pgn  novelty_annotation_error.pgn
examples/twic/: twic1389.pgn
examples/variants/: bughouse.pgn  crazyhouse.pgn  four_player.pgn4
queries/: highlights.scm
script/: known_failures.txt  parse_examples.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: annotations.txt  antichess.txt  bughouse.txt  comments.txt  crazyhouse.txt  header.txt  lan.txt  movetext.txt  multi_game.txt  numbering.txt  result_codes.txt  san.txt  variations.txt
