[package]
name = "tree-sitter-pgn"
description = "Chess PGN grammar for the tree-sitter parsing library"
version = "1.2.17"
keywords = ["incremental", "parsing", "PGN", "chess"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/rolandwalker/tree-sitter-pgn"
edition = "2024"
license = "BSD-2-Clause"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
