[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-pgn"
description = "PGN grammar for tree-sitter"
version = "1.1.3"
keywords = ["incremental", "parsing", "tree-sitter", "PGN", "chess"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "BSD"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rolandwalker/tree-sitter-pgn"

[project.optional-dependencies]
core = ["tree-sitter~=0.23.0"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
