[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-pgn"
description = "PGN grammar for tree-sitter"
version = "1.4.1"
keywords = ["incremental", "parsing", "tree-sitter", "PGN", "chess"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.10"
license.text = "BSD-2-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rolandwalker/tree-sitter-pgn"

[project.optional-dependencies]
core = ["tree-sitter~=0.25.0"]

[tool.cibuildwheel]
build = [
   "cp310-*",
   "cp311-*",
   "cp312-*",
   "cp313-*",
   "cp314-*",
]
skip = [
   "cp38-*",
   "cp39-*",
   "cp314t-*",
   "*-android*",
   "*-ios*",
   "*_ppc64le",
   "*_s390x",
]
build-frontend = "build"
